fix broken images there is problem with image which is used for background

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     ============================-->
     <section id="call-to-action" class="wow fadeIn" style="margin-bottom: 1%;">
       <div class="container text-center" style="padding-top: 5%;">
-        <h3>SAHABAT SANITASI NUSANTARA (SSN)</h3>
+        <h3>SAHABAT SANITASI NUSANTARA</h3>
         <p>adalah sebuah kewirausahaan sosial yang bergerak di bidang penyediaan fasilitas sanitasi dan instalasi
           pengolahan air bersih.</p>
         <!-- <a class="cta-btn" href="#">Call To Action</a> -->
